# invite_customers

./: Cargo.toml  README.md
src/: cli.yml  main.rs
src/customer/: customer.rs  customer_data.rs  invite_list.rs  mod.rs
src/utils/: cli.rs  files.rs  math.rs  mod.rs
test_data/: invalid_data.txt  valid_data.txt
tests/: cli.rs
